# langchain-course

./: pyproject.toml
old/: langchain_lcel.py  langchain_retrieval.py  langchain_retrieval_multiple.py
src/: chain_langchain.py  langchain_buffer_memory.py  langchain_buffer_window.py  langchain_jsonparser.py  langchain_lcel_join.py  langchain_memory.py  langchain_summary.py  simple_langchain.py  simple_openai.py
